Change Cloudents.Core to .net standard

--- a/Zbang.Cloudents.Jared/Zbang.Cloudents.Jared.csproj
+++ b/Zbang.Cloudents.Jared/Zbang.Cloudents.Jared.csproj
@@ -332,7 +332,7 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Cloudents.Core\Cloudents.Core.csproj">
-      <Project>{BA74EE7F-9FC3-4FCF-904A-9EA712C52A07}</Project>
+      <Project>{85208b6b-6ad1-4b2e-8cc7-eec6990085a7}</Project>
       <Name>Cloudents.Core</Name>
     </ProjectReference>
     <ProjectReference Include="..\Cloudents.Infrastructure\Cloudents.Infrastructure.csproj">
@@ -413,7 +413,7 @@
     <VisualStudio>
       <FlavorProperties GUID="{349c5851-65df-11da-9384-00065b846f21}">
         <WebProjectProperties>
-          <UseIIS>True</UseIIS>
+          <UseIIS>False</UseIIS>
           <AutoAssignPort>True</AutoAssignPort>
           <DevelopmentServerPort>1460</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
