--- a/Cloudents.Core/Cloudents.Core.csproj
+++ b/Cloudents.Core/Cloudents.Core.csproj
@@ -1,109 +1,17 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
+<Project Sdk="Microsoft.NET.Sdk">
+
   <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{BA74EE7F-9FC3-4FCF-904A-9EA712C52A07}</ProjectGuid>
-    <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Cloudents.Core</RootNamespace>
-    <AssemblyName>Cloudents.Core</AssemblyName>
-    <TargetFrameworkVersion>v4.7</TargetFrameworkVersion>
-    <FileAlignment>512</FileAlignment>
+    <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-  </PropertyGroup>
+
   <ItemGroup>
-    <Reference Include="System" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.Runtime.Serialization" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Net.Http" />
-    <Reference Include="System.Xml" />
+    <Compile Remove="Class2.cs" />
+    <Compile Remove="Entities\Db\Box.cs" />
+    <Compile Remove="Entities\Db\CourseContent.cs" />
   </ItemGroup>
+
   <ItemGroup>
-    <Compile Include="DTOs\BookSearchDto.cs" />
-    <Compile Include="DTOs\CourseDto.cs" />
-    <Compile Include="DTOs\DocumentDto.cs" />
-    <Compile Include="DTOs\DocumentSeoDto.cs" />
-    <Compile Include="DTOs\FlashcardSeoDto.cs" />
-    <Compile Include="DTOs\IpDto.cs" />
-    <Compile Include="DTOs\JobDto.cs" />
-    <Compile Include="DTOs\QuizAnswerWithDetailDto.cs" />
-    <Compile Include="DTOs\QuizDto.cs" />
-    <Compile Include="DTOs\QuizQuestionWithDetailDto.cs" />
-    <Compile Include="DTOs\QuizSeoDto.cs" />
-    <Compile Include="DTOs\QuizWithDetailDto.cs" />
-    <Compile Include="DTOs\ResultWithFacetDto.cs" />
-    <Compile Include="DTOs\PlaceDto.cs" />
-    <Compile Include="DTOs\SiteMapCountDto.cs" />
-    <Compile Include="DTOs\SiteMapDto.cs" />
-    <Compile Include="DTOs\SiteMapSeoDto.cs" />
-    <Compile Include="DTOs\TutorDto.cs" />
-    <Compile Include="DTOs\UniversityDto.cs" />
-    <Compile Include="DTOs\UniversitySynonymDto.cs" />
-    <Compile Include="DTOs\VideoDto.cs" />
-    <Compile Include="Entities\DocumentDb\Card.cs" />
-    <Compile Include="Entities\DocumentDb\CardSlide.cs" />
-    <Compile Include="Entities\DocumentDb\Flashcard.cs" />
-    <Compile Include="Enum\AiIntent.cs" />
-    <Compile Include="Enum\AIResult.cs" />
-    <Compile Include="DTOs\AIDto.cs" />
-    <Compile Include="DTOs\SearchResult.cs" />
-    <Compile Include="Enum\ParseAttribute.cs" />
-    <Compile Include="Enum\SearchRequestFilter.cs" />
-    <Compile Include="Enum\SearchRequestSort.cs" />
-    <Compile Include="Enum\SeoType.cs" />
-    <Compile Include="Extension\ListExtension.cs" />
-    <Compile Include="Extension\StringExtensions.cs" />
-    <Compile Include="Extension\UriBuilderExtension.cs" />
-    <Compile Include="Interfaces\IAI.cs" />
-    <Compile Include="Interfaces\IBookSearch.cs" />
-    <Compile Include="Interfaces\ICacheProvider.cs" />
-    <Compile Include="Interfaces\ICourseSearch.cs" />
-    <Compile Include="Interfaces\IDocumentCseSearch.cs" />
-    <Compile Include="Interfaces\IDocumentSearch.cs" />
-    <Compile Include="Interfaces\IFlashcardSearch.cs" />
-    <Compile Include="Interfaces\IIpToLocation.cs" />
-    <Compile Include="Interfaces\IJobSearch.cs" />
-    <Compile Include="Interfaces\IKeyGenerator.cs" />
-    <Compile Include="Interfaces\IPlacesSearch.cs" />
-    <Compile Include="Interfaces\IQuestionSearch.cs" />
-    <Compile Include="Interfaces\IReadRepository.cs" />
-    <Compile Include="Interfaces\IReadRepositorySingle.cs" />
-    <Compile Include="Interfaces\ITitleSearch.cs" />
-    <Compile Include="Interfaces\ITutorSearch.cs" />
-    <Compile Include="Interfaces\IUniversitySearch.cs" />
-    <Compile Include="Interfaces\IVideoSearch.cs" />
-    <Compile Include="Models\CacheRegion.cs" />
-    <Compile Include="Models\GeoPoint.cs" />
-    <Compile Include="Models\GeoPointConverter.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Request\SearchQuery.cs" />
-    <Compile Include="Request\SeoQuery.cs" />
-    <Compile Include="TimeConst.cs" />
+    <Folder Include="Entities\Db\" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Entities\Search\" />
-  </ItemGroup>
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+
 </Project>
