--- a/Cloudents.Web/package.json
+++ b/Cloudents.Web/package.json
@@ -36,6 +36,7 @@
     "vuetify-loader": "^0.1.1",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.1",
-    "v-debounce": "^0.1.2"
+    "v-debounce": "^0.1.2",
+    "lodash": "^4.17.4"
   }
 }
