--- a/Cloudents.Web/package.json
+++ b/Cloudents.Web/package.json
@@ -28,7 +28,6 @@
     "vue-avatar-component": "^1.2.4",
     "vue-awesome": "^2.3.4",
     "vue-loader": "^13.3.0",
-    "vue-moment": "^2.1.0",
     "vue-resource": "^1.3.4",
     "vue-router": "^3.0.1",
     "vue-star-rating": "^1.5.0",
@@ -40,7 +39,8 @@
     "vuex-persistedstate": "^2.1.2",
     "webpack": "^3.8.1",
     "webpack-hot-middleware": "^2.20.0",
-    "webpack-visualizer-plugin" :  "0.1.11" 
+    "webpack-visualizer-plugin" :  "0.1.11",
+    "vue-lazyload":"^1.1.4"
 
   }
 }
