--- a/Cloudents.Web/.babelrc
+++ b/Cloudents.Web/.babelrc
@@ -1,5 +1,5 @@
 ﻿{
-  "presets": ["env"],
+  "presets": ["env","es2015"],
   "plugins": [
   "syntax-dynamic-import",
   "transform-object-rest-spread",
