--- a/Cloudents.Web/package.json
+++ b/Cloudents.Web/package.json
@@ -37,6 +37,7 @@
     "vuetify-loader": "^0.1.1",
     "vuex": "^3.0.1",
     "vuex-persistedstate": "^2.1.2",
+    "vue-analytics": "^5.5.0",
     "webpack": "^3.8.1",
     "webpack-hot-middleware": "^2.20.0",
     "webpack-visualizer-plugin": "0.1.11",
