--- a/Cloudents.Web/package.json
+++ b/Cloudents.Web/package.json
@@ -42,8 +42,12 @@
     "webpack-hot-middleware": "^2.20.0",
     "webpack-visualizer-plugin": "0.1.11",
     "clean-webpack-plugin": "0.1.17",
-    "vue-lazyload":"^1.1.4",
-    "webfonts-loader" : "0.2.4" 
+    "vue-lazyload": "^1.1.4",
+    "webfonts-loader": "4.0.1",
+    "purifycss-webpack": "0.7.0",
+    "purify-css": "1.2.6"
 
-  }
+
+  },
+  "dependencies": {}
 }
