--- a/Cloudents.Web/package.json
+++ b/Cloudents.Web/package.json
@@ -28,7 +28,6 @@
     "vue-adsense": "^1.0.1",
     "vue-avatar-component": "^1.2.4",
     "vue-loader": "^13.3.0",
-    "vue-resource": "^1.3.4",
     "vue-router": "^3.0.1",
     "vue-star-rating": "^1.5.0",
     "vue-svg-loader": "^0.3.0",
@@ -46,9 +45,9 @@
     "webfonts-loader": "4.0.1",
     "purifycss-webpack": "0.7.0",
     "purify-css": "1.2.6",
-    "webfontloader": "1.6.28"
-
-
+    "webfontloader": "1.6.28",
+    "axios": "^0.17.1",
+    "qs":"^6.5.1"
   },
   "dependencies": {}
 }
