--- a/Cloudents.Web/package.json
+++ b/Cloudents.Web/package.json
@@ -40,6 +40,7 @@
     "webpack": "^3.8.1",
     "webpack-hot-middleware": "^2.20.0",
     "webpack-visualizer-plugin": "0.1.11",
+    "webpack-stats-plugin": "0.1.5",
     "clean-webpack-plugin": "0.1.17",
     "vue-lazyload": "^1.1.4",
     "webfonts-loader": "4.0.1",
