--- a/Test/App.config
+++ b/Test/App.config
@@ -5,7 +5,7 @@
     </startup>
   <connectionStrings>
     <!--<add name="ZBox" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=ZBox;Integrated Security=SSPI;" providerName="System.Data.SqlClient" />-->
-    <add name="ZBox" connectionString="Server=tcp:on0rodxe8f.database.windows.net;Database=ZBoxNew;User ID=ZBoxAdmin@on0rodxe8f;Password=Pa$$W0rd;Trusted_Connection=False;Encrypt=True;Connection Timeout=30;MultipleActiveResultSets=true;" providerName="System.Data.SqlClient" />
+    <add name="ZBox" connectionString="Server=tcp:on0rodxe8f.database.windows.net;Database=ZBoxNew_Develop;User ID=ZBoxAdmin@on0rodxe8f;Password=Pa$$W0rd;Trusted_Connection=False;Encrypt=True;Connection Timeout=30;MultipleActiveResultSets=true;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="AzureSearchKey" value="5B0433BFBBE625C9D60F7330CFF103F0" />
