--- a/Cloudents.Web/package.json
+++ b/Cloudents.Web/package.json
@@ -32,6 +32,7 @@
     "vue-star-rating": "^1.5.0",
     "vue-svg-loader": "^0.3.0",
     "vue-template-compiler": "^2.5.2",
+    "vue-scrollto": "2.8.0",
     "vuetify": "^0.17.3",
     "vuetify-loader": "^0.1.1",
     "vuex": "^3.0.1",
@@ -48,7 +49,7 @@
     "purify-css": "1.2.6",
     "webfontloader": "1.6.28",
     "axios": "^0.17.1",
-    "querystring":"^0.2.0"
+    "querystring": "^0.2.0"
   },
   "dependencies": {}
 }
