Starting to work on server side rendering

--- a/Cloudents.Web/package.json
+++ b/Cloudents.Web/package.json
@@ -3,6 +3,7 @@
   "name": "asp.net",
   "private": true,
   "devDependencies": {
+    "aspnet-prerendering": "3.0.1",
     "aspnet-webpack": "^2.0.1",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
@@ -24,14 +25,15 @@
     "stylus-loader": "^3.0.1",
     "url-loader": "^0.6.2",
     "v-debounce": "^0.1.2",
-    "vue": "^2.5.2",
+    "vue": "2.5.13",
+    "vue-server-renderer": "2.5.13",
     "vue-adsense": "^1.0.1",
     "vue-avatar-component": "^1.2.4",
     "vue-loader": "^13.3.0",
     "vue-router": "^3.0.1",
     "vue-star-rating": "^1.5.0",
     "vue-svg-loader": "^0.3.0",
-    "vue-template-compiler": "^2.5.2",
+    "vue-template-compiler": "2.5.13",
     "vue-scrollto": "2.8.0",
     "vuetify": "^0.17.3",
     "vuetify-loader": "^0.1.1",
@@ -48,6 +50,7 @@
     "purifycss-webpack": "0.7.0",
     "purify-css": "1.2.6",
     "webfontloader": "1.6.28",
+    "webpack-merge": "4.1.1",
     "axios": "^0.17.1",
     "querystring": "^0.2.0"
   },
