--- a/Cloudents.Infrastructure.Test/packages.config
+++ b/Cloudents.Infrastructure.Test/packages.config
@@ -1,8 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Autofac" version="4.0.1" targetFramework="net471" />
+  <package id="Autofac" version="4.6.1" targetFramework="net471" />
   <package id="Autofac.Extras.Moq" version="4.2.0" targetFramework="net471" />
-  <package id="Castle.Core" version="4.0.0" targetFramework="net471" />
+  <package id="Castle.Core" version="4.2.1" targetFramework="net471" />
   <package id="Microsoft.CSharp" version="4.4.0" targetFramework="net471" />
   <package id="Microsoft.EntityFrameworkCore" version="2.0.1" targetFramework="net471" />
   <package id="Microsoft.EntityFrameworkCore.InMemory" version="2.0.1" targetFramework="net471" />
@@ -19,7 +19,9 @@
   <package id="Moq" version="4.7.0" targetFramework="net471" />
   <package id="MSTest.TestAdapter" version="1.2.0" targetFramework="net471" />
   <package id="MSTest.TestFramework" version="1.2.0" targetFramework="net471" />
+  <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net471" />
   <package id="Remotion.Linq" version="2.1.1" targetFramework="net471" />
+  <package id="Spitball.Luis" version="1.1.2" targetFramework="net471" />
   <package id="System.Collections" version="4.0.11" targetFramework="net471" />
   <package id="System.Collections.Immutable" version="1.4.0" targetFramework="net471" />
   <package id="System.Collections.NonGeneric" version="4.0.1" targetFramework="net471" />
