--- a/Cloudents.Web/Cloudents.Web.csproj
+++ b/Cloudents.Web/Cloudents.Web.csproj
@@ -72,6 +72,7 @@
   <ItemGroup>
     <Folder Include="Extensions\" />
     <Folder Include="Views\Home\" />
+    <Folder Include="wwwroot\Images\alex\" />
   </ItemGroup>
 
   <ItemGroup>
