Commit to change version

--- a/Cloudents.Infrastructure.Framework/Cloudents.Infrastructure.Framework.csproj
+++ b/Cloudents.Infrastructure.Framework/Cloudents.Infrastructure.Framework.csproj
@@ -40,6 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AppenderMetadata.cs" />
     <Compile Include="FactoryProcessor.cs" />
     <Compile Include="IocModule.cs" />
     <Compile Include="PdfProcessor.cs" />
