--- a/Cloudents.Infrastructure.Framework/Cloudents.Infrastructure.Framework.csproj
+++ b/Cloudents.Infrastructure.Framework/Cloudents.Infrastructure.Framework.csproj
@@ -9,8 +9,9 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Cloudents.Infrastructure.Framework</RootNamespace>
     <AssemblyName>Cloudents.Infrastructure.Framework</AssemblyName>
-    <TargetFrameworkVersion>v4.7.1</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.7</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
