--- a/Cloudents.Core/Cloudents.Core.csproj
+++ b/Cloudents.Core/Cloudents.Core.csproj
@@ -15,6 +15,7 @@
   <ItemGroup>
     <Compile Remove="Class2.cs" />
     <Compile Remove="Entities\Db\CourseContent.cs" />
+    <Compile Remove="Models\GeoPointConverter.cs" />
   </ItemGroup>
 
   <ItemGroup>
