--- a/Cloudents.Mobile/Cloudents.Mobile.csproj
+++ b/Cloudents.Mobile/Cloudents.Mobile.csproj
@@ -28,6 +28,7 @@
     </NuGetPackageImportStamp>
     <RestoreProjectStyle>PackageReference</RestoreProjectStyle>
     <TargetFrameworkProfile />
+    <ApplicationInsightsResourceId />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -127,6 +128,7 @@
     <Folder Include="App_Data\" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Connected Services\Application Insights\ConnectedService.json" />
     <None Include="packages.config">
       <SubType>Designer</SubType>
     </None>
@@ -154,6 +156,9 @@
     </PackageReference>
     <PackageReference Include="Autofac.WebApi2.Owin">
       <Version>4.0.0</Version>
+    </PackageReference>
+    <PackageReference Include="Microsoft.ApplicationInsights.Web">
+      <Version>2.4.1</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.AspNet.TelemetryCorrelation">
       <Version>1.0.0</Version>
