Added ApplicationInsights to mobile service.

--- a/Cloudents.Mobile/Cloudents.Mobile.csproj
+++ b/Cloudents.Mobile/Cloudents.Mobile.csproj
@@ -129,6 +129,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Connected Services\Application Insights\ConnectedService.json" />
+    <Content Include="ApplicationInsights.config" />
     <None Include="packages.config">
       <SubType>Designer</SubType>
     </None>
