Added 404 and 500 pages

--- a/Cloudents.Web/Cloudents.Web.csproj
+++ b/Cloudents.Web/Cloudents.Web.csproj
@@ -37,6 +37,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Include="Views\Error\ServerError.cshtml" />
+    <None Include="wwwroot\Content\ErrorPages\css\error.css" />
+    <None Include="wwwroot\Content\ErrorPages\img\404_image.png" />
     <None Include="wwwroot\Content\main.less" />
     <None Include="wwwroot\robots.txt" />
   </ItemGroup>
