Starting to work on parse link program

--- a/Cloudents.Infrastructure/Cloudents.Infrastructure.csproj
+++ b/Cloudents.Infrastructure/Cloudents.Infrastructure.csproj
@@ -17,6 +17,7 @@
   <ItemGroup>
     <Compile Remove="Search\CseSearch.cs" />
     <Compile Remove="Search\TitleSearch.cs" />
+    <Compile Remove="Search\Tutor\TutorMeSearch.cs" />
   </ItemGroup>
 
   <ItemGroup>
