--- a/Cloudents.Infrastructure.Framework/Cloudents.Infrastructure.Framework.csproj
+++ b/Cloudents.Infrastructure.Framework/Cloudents.Infrastructure.Framework.csproj
@@ -1,90 +1,32 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{7144FD3F-2400-40BF-BC67-1864057E371E}</ProjectGuid>
-    <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Cloudents.Infrastructure.Framework</RootNamespace>
-    <AssemblyName>Cloudents.Infrastructure.Framework</AssemblyName>
-    <TargetFrameworkVersion>v4.7</TargetFrameworkVersion>
-    <FileAlignment>512</FileAlignment>
-    <TargetFrameworkProfile />
+    <TargetFramework>net461</TargetFramework>
+    <AssemblyVersion>1.1.0.0</AssemblyVersion>
+    <FileVersion>1.1.0.0</FileVersion>
   </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <LangVersion>7.1</LangVersion>
   </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <LangVersion>7.1</LangVersion>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="System" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.Drawing" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Net.Http" />
-    <Reference Include="System.Xml" />
+    <PackageReference Include="Aspose.Cells" Version="8.5.0" />
+    <PackageReference Include="Aspose.Imaging" Version="3.0.0" />
+    <PackageReference Include="Aspose.Pdf" Version="10.5.1" />
+    <PackageReference Include="Aspose.Slides.NET" Version="15.5.0" />
+    <PackageReference Include="Aspose.Words" Version="15.6.0" />
+    <PackageReference Include="Autofac" Version="4.6.1" />
+    <PackageReference Include="FluentNHibernate" Version="2.0.3" />
+    <PackageReference Include="NHibernate" Version="5.0.3" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AppenderMetadata.cs" />
-    <Compile Include="ExcelProcessor.cs" />
-    <Compile Include="FactoryProcessor.cs" />
-    <Compile Include="ImageProcessor.cs" />
-    <Compile Include="IocModule.cs" />
-    <Compile Include="PdfProcessor.cs" />
-    <Compile Include="PowerPoint2007Processor.cs" />
-    <Compile Include="Processor.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TextProcessor.cs" />
-    <Compile Include="TiffProcessor.cs" />
-    <Compile Include="WordProcessor.cs" />
+    <ProjectReference Include="..\Cloudents.Core\Cloudents.Core.csproj" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Aspose.Cells">
-      <Version>8.5.0</Version>
-    </PackageReference>
-    <PackageReference Include="Aspose.Imaging">
-      <Version>3.0.0</Version>
-    </PackageReference>
-    <PackageReference Include="Aspose.Pdf">
-      <Version>10.5.1</Version>
-    </PackageReference>
-    <PackageReference Include="Aspose.Slides.NET">
-      <Version>15.5.0</Version>
-    </PackageReference>
-    <PackageReference Include="Aspose.Words">
-      <Version>15.6.0</Version>
-    </PackageReference>
-    <PackageReference Include="Autofac">
-      <Version>4.6.1</Version>
-    </PackageReference>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Aspose.Total.lic">
+    <None Update="Aspose.Total.lic">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
   </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Cloudents.Core\Cloudents.Core.csproj">
-      <Project>{85208b6b-6ad1-4b2e-8cc7-eec6990085a7}</Project>
-      <Name>Cloudents.Core</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
