--- a/Cloudents.Infrastructure/Cloudents.Infrastructure.csproj
+++ b/Cloudents.Infrastructure/Cloudents.Infrastructure.csproj
@@ -15,6 +15,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Data\AppDbContext.cs" />
+    <Compile Remove="Data\EfRepository.cs" />
     <Compile Remove="Search\CseSearch.cs" />
     <Compile Remove="Search\TitleSearch.cs" />
     <Compile Remove="Search\Tutor\TutorMeSearch.cs" />
